// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders no errors 1`] = `
<section
  className="ErrorPane"
>
  <section
    className="Pane-empty-message"
  >
    <svg>
      logo-wordmark-gray.svg
    </svg>
    <h2>
      No Errors Found
    </h2>
  </section>
</section>
`;

exports[`renders one build error 1`] = `
<section
  className="ErrorPane"
>
  <ul>
    <li
      className="ErrorPane-item"
    >
      <header>
        <p>
          foo
        </p>
        <p>
          <time
            dateTime="1949-11-18T09:39:00.000Z"
            title="1,555,970,585,039"
          >
            69 years ago
          </time>
        </p>
      </header>
      <section>
        <code>
          <span
            className={null}
            style={null}
          >
            laa dee daa I'm an error
          </span>
        </code>
        <code>
          <span
            className={null}
            style={null}
          >
            for real I am
          </span>
        </code>
      </section>
    </li>
  </ul>
</section>
`;

exports[`renders one container start error 1`] = `
<section
  className="ErrorPane"
>
  <ul>
    <li
      className="ErrorPane-item"
    >
      <header>
        <p>
          foo
        </p>
        <p>
          1,555,970,585,039
        </p>
      </header>
      <section>
        Eeeeek there is a problem
      </section>
    </li>
  </ul>
</section>
`;

exports[`renders one container start error 2`] = `
<section
  className="ErrorPane"
>
  <ul>
    <li
      className="ErrorPane-item"
    >
      <header>
        <p>
          foo
        </p>
        <p>
          1,555,970,585,039
        </p>
      </header>
      <section>
        Eeeeek there is a problem
      </section>
    </li>
  </ul>
</section>
`;

exports[`renders the last build with an error 1`] = `
<section
  className="ErrorPane"
>
  <ul>
    <li
      className="ErrorPane-item"
    >
      <header>
        <p>
          foo
        </p>
        <p>
          <time
            dateTime="1949-11-18T09:39:00.000Z"
            title="1,555,970,585,039"
          >
            69 years ago
          </time>
        </p>
      </header>
      <section>
        <code>
          <span
            className={null}
            style={null}
          >
            laa dee daa I'm another error
          </span>
        </code>
        <code>
          <span
            className={null}
            style={null}
          >
            Better watch out
          </span>
        </code>
      </section>
    </li>
  </ul>
</section>
`;

exports[`shows that a container has restarted 1`] = `
<section
  className="ErrorPane"
>
  <ul>
    <li
      className="ErrorPane-item"
    >
      <header>
        <p>
          foo
        </p>
        <p>
          Restarts: 1
        </p>
        <p>
          1,555,970,585,039
        </p>
      </header>
      <section>
        <p>
          Last log line: Eeeeek the container crashed
        </p>
      </section>
    </li>
  </ul>
</section>
`;
